# variant

./: README.md  changelog
variant/: CHANGELOG.rst  CMakeLists.txt  package.xml
variant_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
variant_msgs/msg/: Test.msg  Variant.msg  VariantHeader.msg  VariantType.msg
variant_topic_test/: CHANGELOG.rst  CMakeLists.txt  package.xml
variant_topic_test/src/: concept_test.cpp  serialize_test.cpp
variant_topic_test/test/: DataTypeRegistryTest.cpp  DataTypeTest.cpp  MD5SumTest.cpp  MessageDefinitionTest.cpp  MessageFieldCollectionTest.cpp  MessageStreamTest.cpp  MessageTest.cpp  MessageTypeTest.cpp  PointerTest.cpp  SerializerTest.cpp  VariantTest.cpp
variant_topic_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
variant_topic_tools/include/variant_topic_tools/: ArrayDataType.h  ArrayDataType.tpp  ArrayMemberPointer.h  ArrayMemberPointer.tpp  ArraySerializer.h  ArraySerializer.tpp  ArrayTypeTraits.h  ArrayVariant.h  ArrayVariant.tpp  BuiltinDataType.h  BuiltinDataType.tpp  BuiltinPointer.h  BuiltinPointer.tpp  BuiltinSerializer.h  BuiltinSerializer.tpp  BuiltinTypeTraits.h  BuiltinVariant.h  BuiltinVariant.tpp  CollectionVariant.h  CollectionVariant.tpp  DataType.h  DataType.tpp  DataTypeRegistry.h  DataTypeRegistry.tpp  DataTypeTraits.h  Exceptions.h  Forwards.h  MD5Sum.h  Message.h  Message.tpp  MessageConstant.h  MessageConstant.tpp  MessageDataType.h  MessageDataType.tpp  MessageDefinition.h  MessageDefinition.tpp  MessageDefinitionParser.h  MessageField.h  MessageField.tpp  MessageFieldCollection.h  (+41 more)
variant_topic_tools/src/: ArrayDataType.cpp  ArraySerializer.cpp  ArrayVariant.cpp  BuiltinDataType.cpp  BuiltinSerializer.cpp  BuiltinVariant.cpp  CollectionVariant.cpp  DataType.cpp  DataTypeRegistry.cpp  Exceptions.cpp  MD5Sum.cpp  Message.cpp  MessageConstant.cpp  MessageDataType.cpp  MessageDefinition.cpp  MessageDefinitionParser.cpp  MessageField.cpp  MessageFieldCollection.cpp  MessageHeader.cpp  MessageMember.cpp  MessageSerializer.cpp  MessageStream.cpp  MessageTraits.cpp  MessageType.cpp  MessageTypeParser.cpp  MessageVariable.cpp  MessageVariant.cpp  Publisher.cpp  Serialization.cpp  Serializer.cpp  SharedVariant.cpp  Subscriber.cpp  Variant.cpp  VariantArray.cpp  VariantArrayMember.cpp  VariantCollection.cpp  VariantMessage.cpp  concept_test.cpp  echo.cpp  info.cpp  (+3 more)
variant_topic_tools/test/: DataTypeRegistryTest.cpp  DataTypeTest.cpp  MD5SumTest.cpp  MessageDefinitionParserTest.cpp  MessageDefinitionTest.cpp  MessageFieldCollectionTest.cpp  MessageTest.cpp  MessageTypeParserTest.cpp  MessageTypeTest.cpp  PointerTest.cpp  SerializerTest.cpp  VariantTest.cpp  variant_topic_test.cpp
