<?xml version="1.0"?>
<package format="2">
  <name>variant</name>
  <version>0.1.1</version>
  <description>Meta-package for the universal variant library.</description>
  <author>Ralf Kaestner</author>
  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>
  <maintainer email="samuel.bachmann@gmail.com">Samuel Bachmann</maintainer>
  <license>GNU Lesser General Public License (LGPL)</license>
  <url type="website">http://github.com/ethz-asl/ros-topic-variant</url>
  <url type="bugtracker">http://github.com/ethz-asl/ros-topic-variant/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>variant_msgs</exec_depend>
  <exec_depend>variant_topic_test</exec_depend>
  <exec_depend>variant_topic_tools</exec_depend>
  <export>
    <metapackage />
  </export>
</package>
