<package>
  <name>variant_msgs</name>
  <version>0.1.19</version>
  <description>Variant messages are designed to accommodate the information content of any invariant message. They are truly generic and can freely be converted to and from specific message objects.</description>
  <author email="ralf.kaestner@gmail.com">Ralf Kaestner</author>
  <maintainer email="sbachmann@anybotics.com">Samuel Bachmann</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <license>GNU Lesser General Public License (LGPL)</license>
  <url>http://github.com/anybotics/variant</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
