<package>
  <name>variant_topic_test</name>
  <version>0.1.1</version>
  <description>
    Variant topic tools testing suites.
  </description>
  <author>Ralf Kaestner</author>
  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>
  <license>GNU Lesser General Public License (LGPL)</license>
  <url>http://github.com/ethz-asl/ros-topic-variant</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>variant_msgs</build_depend>
  <build_depend>variant_topic_tools</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>variant_msgs</run_depend>
  <run_depend>variant_topic_tools</run_depend>
</package>
