<package>
  <name>variant_topic_test</name>
  <version>0.1.5</version>
  <description>Variant topic tools testing suites.</description>
  <author email="ralf.kaestner@gmail.com">Ralf Kaestner</author>
  <maintainer email="sbachmann@anybotics.com">Samuel Bachmann</maintainer>
  <maintainer email="sbachmann@anybotics.com">Samuel Bachmann</maintainer>
  <license>GNU Lesser General Public License (LGPL)</license>
  <url>http://github.com/anybotics/variant</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>variant_msgs</build_depend>
  <build_depend>variant_topic_tools</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>variant_msgs</run_depend>
  <run_depend>variant_topic_tools</run_depend>
</package>
