<package>
  <name>variant_topic_tools</name>
  <version>0.1.26</version>
  <description>Topic tools for treating messages as variant types.</description>
  <author email="ralf.kaestner@gmail.com">Ralf Kaestner</author>
  <maintainer email="sbachmann@anybotics.com">Samuel Bachmann</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <license>GNU Lesser General Public License (LGPL)</license>
  <url>http://github.com/anybotics/variant</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>variant_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>variant_msgs</run_depend>

  <test_depend>geometry_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>gtest</test_depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->

</package>
